할 일 관ㄹ 페이지

--- a/bin/main/application.yml
+++ b/bin/main/application.yml
@@ -1,4 +1,8 @@
+site:
+  author : jjeda
+
 logging.level:
+  todoapp: DEBUG
   org.springframework.boot: INFO
   org.springframework.web: DEBUG
     
