--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,8 @@
+site:
+  author : jjeda
+
 logging.level:
+  todoapp: DEBUG
   org.springframework.boot: INFO
   org.springframework.web: DEBUG
     
